--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon app.js localhost 3000"
+    "watch": "sass sass/style.scss public/stylesheets/style.css && nodemon app.js localhost 3000"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
