--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "socket.io": "^2.3.0"
   }
 }
