--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "formatio",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "watch": "sass sass/style.scss public/stylesheets/style.css && nodemon app.js localhost 3000"
-  },
+  "version": "1.0.0",
+  "description": "an elemental based game stealing cells",
+  "main": "app.js",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "bootstrap": "^4.5.3",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "bcrypt": "^5.0.0",
     "express": "^4.16.4",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "jquery": "^3.5.1",
-    "morgan": "~1.9.1",
-    "serve-static": "^1.14.1",
-    "socket.io": "^2.3.0"
-  }
+    "mongodb": "^3.6.2",
+    "mysql": "^2.18.1",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/margotr/formatio.git"
+  },
+  "author": "Margot Rutgers & Tom Onderwater",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/margotr/formatio/issues"
+  },
+  "homepage": "https://github.com/margotr/formatio#readme"
 }
