--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.16.4",
+    "microseconds": "^0.2.0",
     "mongodb": "^3.6.2",
     "mysql": "^2.18.1",
     "sequelize": "^6.3.5",
